--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description: "Foo"
 ---
 
 <img
-        src="./img/Introducing-Baldir.png"
+        src="/public/img/Introducing-Baldir.png"
         alt="Baldir; Développeur de valeur d‘usage et de logiciel."
 >
 {% for blog in collections.blog %}
