feat: remove blogs lists from index

--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 ---
 layout: layout.html
 title: Baldir
-description: "Foo"
+description: "TODO"
 ---
 
 <img
         src="/public/img/Introducing-Baldir.png"
         alt="Baldir; Développeur de valeur d‘usage et de logiciel."
 >
-{% for blog in collections.blog %}
-<h2><a href="{{blog.url}}">
-  {{ blog.data.title }}</a></h2>
-{% endfor %}
