--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,6 @@
 ---
 layout: layout.html
-title: Articles de blog
-#description: "Articles de blog"
+title: "Articles de blog"
 ---
 
 <div style="    display: flex;
