--- a/making-of.html
+++ b/making-of.html
@@ -1,9 +1,9 @@
 ---
 layout: "default.html"
 title: "Making of"
+description: "Dans cette série d'articles, je relate comment je construis ce site au fur et à mesure."
 ---
 <p>
-    Dans cette série d'articles, je relate comment je construis ce site au fur et à mesure.
     Je tenterai de le faire évoluer en utilisant la technique des petits pas.
     C'est à dire : une chose à la fois.
     En expliquant autant que je peux dans un langage clair ce que je fais et les raisons de mes actions.
