build: optimisation du build incrémental en déclarant les collections avec eleventyImport

--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,8 @@
 ---
 layout: layout.html
 title: "Articles de blog"
+eleventyImport:
+    collections: ["allFinishedArticles"]
 ---
 
 <div style="    display: flex;
