--- a/making-of.html
+++ b/making-of.html
@@ -2,6 +2,8 @@
 layout: "default.html"
 title: "Making of"
 description: "Dans cette série d'articles, je relate comment je construis ce site au fur et à mesure."
+eleventyImport:
+    collections: ["making-of"]
 ---
 <p>
     Je tenterai de le faire évoluer en utilisant la technique des petits pas.
