Lien de glossaire pour la technique des petits pas

--- a/making-of.html
+++ b/making-of.html
@@ -6,7 +6,7 @@ eleventyImport:
     collections: ["making-of"]
 ---
 <p>
-    Je tenterai de le faire évoluer en utilisant la technique des petits pas.
+    Je tenterai de le faire évoluer en utilisant [la technique des petits pas](/glossaire/petits-pas/).
     C'est à dire : une chose à la fois.
     En expliquant autant que je peux dans un langage clair ce que je fais et les raisons de mes actions.
 </p>
