feat: changment de formulation pour TODO

--- a/making-of.html
+++ b/making-of.html
@@ -24,4 +24,4 @@ eleventyImport:
 
 <hr/>
 
-<a href="/TODO">Prochaines étapes possibles</a>
+<a href="/TODO">Reflexions et prochaines évolutions possibles</a>
