--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: "Accueil"
 eleventyImport:
     collections: ["latestFewFinishedArticles"]
 ---
-
+<header><h1>{{title}}</h1></header>
 <section>
     <h2>Articles</h2>
     <p>Ici, j'écris autant que je peux sur des sujets variés (en général techniques)</p>
