feat: opml link as downloadable

--- a/souscriptions-suivies.html
+++ b/souscriptions-suivies.html
@@ -4,4 +4,4 @@ title: Souscriptions suivies
 description: Les souscriptions que je suis
 ---
 
-[Au format OPML](/souscriptions-suivies/souscriptions_suivies_par_baldir.opml)
+<a href="/souscriptions-suivies/souscriptions_suivies_par_baldir.opml" download>Au format OPML</a>
